[options]
packages = xoverturning
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy
    regionmask
    scipy
    setuptools >= 41.2  # For pkg_resources
    xarray
setup_requires =
    setuptools >= 41.2

